improved funding bar, fix spacing from px to em

--- a/src/app/navigation/Topnavbar.component.css
+++ b/src/app/navigation/Topnavbar.component.css
@@ -11,13 +11,15 @@
 .progress{
     border-radius: 40px !important;
     background-color: rgb(35,35,35) !important;
-    height: 22px;
+    height: 2em;
     
     /* Changes below */
     -webkit-box-shadow: inset 0 0 0 2px rgb(215,215,215)  !important;
 	  -moz-box-shadow: inset 0 0 0 2px  rgb(215,215,215) !important;
 	  box-shadow: inset 0 0 0 2px  rgb(215,215,215) !important;
     border: none;
+    padding: 3px;
+    margin-right: 1em;
 }
 .left-section{
     margin-top:0px;
@@ -29,7 +31,7 @@
 
 }
 .sr-only {
-    width: 150px;
+    width: 15em;
 }
 nav {
     background-color: rgb(35,35,35) !important;
