--- a/src/app/splashelements/Titlesplash.component.css
+++ b/src/app/splashelements/Titlesplash.component.css
@@ -1,7 +1,7 @@
 .masthead {
     background-image: url(/../assets/blenderinblender.png); 
     /* Full height */
-    height: 750px;
+    height: 70vh;
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
